# urt_streamer

./: CMakeLists.txt  README.md
include/: converter.h  manager.h  reader.h  sender.h  settings.h  storage.h
src/: main.cpp  reader.cpp  sender.cpp  settings.cpp  storage.cpp
